--- a/Code/CourseCard/app/src/main/res/layout/activity_main.xml
+++ b/Code/CourseCard/app/src/main/res/layout/activity_main.xml
@@ -13,32 +13,20 @@
 
     </android.support.v7.widget.RecyclerView>
 
-    <LinearLayout
-        android:id="@+id/linearLayout2"
-        android:layout_width="match_parent"
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/floatingActionButton"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout">
-
-        <EditText
-            android:id="@+id/editText2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:ems="10"
-            android:hint="                        请输入内容"
-            android:inputType="textMultiLine"
-            android:textAllCaps="false" />
-
-        <Button
-            android:id="@+id/button4"
-            android:layout_width="10dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="#f7f7f7"
-            android:text="发送"
-            android:textColor="@android:color/holo_green_light" />
-    </LinearLayout>
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:onClick="skipEdit"
+        app:backgroundTint="@android:color/holo_green_light"
+        app:borderWidth="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:rippleColor="@android:color/holo_green_dark"
+        app:srcCompat="@drawable/icons8_compose_40" />
 
     <LinearLayout
         android:id="@+id/linearLayout"
