--- a/src/app/src/main/res/layout/activity_main.xml
+++ b/src/app/src/main/res/layout/activity_main.xml
@@ -30,7 +30,11 @@
             android:layout_width="@dimen/activity_main_iv_back_size"
             android:layout_height="@dimen/activity_main_iv_back_size"
             android:layout_alignParentStart="true"
-            android:layout_margin="@dimen/activity_main_iv_back_margin"
+            android:layout_marginStart="@dimen/activity_main_iv_back_margin"
+            android:layout_marginTop="@dimen/activity_main_iv_back_margin"
+            android:layout_marginEnd="@dimen/activity_main_iv_back_margin"
+            android:layout_marginBottom="@dimen/activity_main_iv_back_margin"
+            android:contentDescription="@string/appbar_left_info"
             app:srcCompat="@drawable/back" />
 
         <ImageView
@@ -38,7 +42,11 @@
             android:layout_width="@dimen/activity_main_iv_back_size"
             android:layout_height="@dimen/activity_main_iv_back_size"
             android:layout_alignParentEnd="true"
-            android:layout_margin="@dimen/activity_main_iv_add_margin"
+            android:layout_marginStart="@dimen/activity_main_iv_add_margin"
+            android:layout_marginTop="@dimen/activity_main_iv_add_margin"
+            android:layout_marginEnd="@dimen/activity_main_iv_add_margin"
+            android:layout_marginBottom="@dimen/activity_main_iv_add_margin"
+            android:contentDescription="@string/appbar_right_info"
             app:srcCompat="@drawable/add" />
 
     </RelativeLayout>
