--- a/src/app/src/main/res/layout/activity_info_edit.xml
+++ b/src/app/src/main/res/layout/activity_info_edit.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/activity_info_layout"
+    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/activity_info_edit_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/main_bg"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <android.support.v7.widget.CardView
-        android:id="@+id/activity_info_cv"
+        android:id="@+id/activity_info_edit_cv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_centerInParent="true"
@@ -21,7 +21,7 @@
             android:layout_margin="@dimen/activity_info_margin">
 
             <TextView
-                android:id="@+id/activity_info_tv_name"
+                android:id="@+id/activity_info_edit_tv_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/activity_info_name_default"
@@ -29,126 +29,137 @@
                 android:textSize="@dimen/activity_info_name_font" />
 
             <ImageView
-                android:id="@+id/activity_info_iv_teacher"
+                android:id="@+id/activity_info_edit_iv_teacher"
                 android:layout_width="@dimen/activity_info_iv_teacher_size"
                 android:layout_height="@dimen/activity_info_iv_teacher_size"
-                android:layout_below="@id/activity_info_tv_name"
+                android:layout_below="@id/activity_info_edit_tv_name"
                 android:layout_marginTop="@dimen/activity_info_margin_small"
                 android:contentDescription="@string/todo"
                 app:srcCompat="@drawable/teacher" />
             <TextView
-                android:id="@+id/activity_info_tv_teacher"
+                android:id="@+id/activity_info_edit_tv_teacher"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignTop="@+id/activity_info_iv_teacher"
-                android:layout_toEndOf="@+id/activity_info_iv_teacher"
-                android:layout_toRightOf="@id/activity_info_iv_teacher"
+                android:layout_alignTop="@+id/activity_info_edit_iv_teacher"
+                android:layout_toEndOf="@+id/activity_info_edit_iv_teacher"
+                android:layout_toRightOf="@id/activity_info_edit_iv_teacher"
                 android:layout_marginLeft="@dimen/activity_info_margin_small"
                 android:text="@string/activity_info_teacher_default"
                 android:textColor="@color/activity_info_teacher_font"
                 android:textSize="@dimen/activity_info_teacher_font" />
 
             <ImageView
-                android:id="@+id/activity_info_iv_place"
+                android:id="@+id/activity_info_edit_iv_place"
                 android:layout_width="@dimen/activity_info_iv_place_size"
                 android:layout_height="@dimen/activity_info_iv_place_size"
-                android:layout_below="@id/activity_info_tv_teacher"
+                android:layout_below="@id/activity_info_edit_tv_teacher"
                 android:layout_marginTop="@dimen/activity_info_margin_small"
                 android:contentDescription="@string/todo"
                 app:srcCompat="@drawable/place" />
             <TextView
-                android:id="@+id/activity_info_tv_place"
+                android:id="@+id/activity_info_edit_tv_place"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignTop="@+id/activity_info_iv_place"
-                android:layout_toEndOf="@+id/activity_info_iv_place"
-                android:layout_toRightOf="@id/activity_info_iv_place"
+                android:layout_alignTop="@+id/activity_info_edit_iv_place"
+                android:layout_toEndOf="@+id/activity_info_edit_iv_place"
+                android:layout_toRightOf="@id/activity_info_edit_iv_place"
                 android:layout_marginLeft="@dimen/activity_info_margin_small"
                 android:text="@string/activity_info_place_default"
                 android:textColor="@color/activity_info_place_font"
                 android:textSize="@dimen/activity_info_place_font" />
 
             <ImageView
-                android:id="@+id/activity_info_iv_time"
+                android:id="@+id/activity_info_edit_iv_time"
                 android:layout_width="@dimen/activity_info_iv_time_size"
                 android:layout_height="@dimen/activity_info_iv_time_size"
-                android:layout_below="@id/activity_info_tv_place"
+                android:layout_below="@id/activity_info_edit_tv_place"
                 android:layout_marginTop="@dimen/activity_info_margin_small"
                 android:contentDescription="@string/todo"
                 app:srcCompat="@drawable/time" />
             <TextView
-                android:id="@+id/activity_info_tv_time"
+                android:id="@+id/activity_info_edit_tv_time"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignTop="@+id/activity_info_iv_time"
-                android:layout_toEndOf="@+id/activity_info_iv_time"
-                android:layout_toRightOf="@id/activity_info_iv_time"
+                android:layout_alignTop="@+id/activity_info_edit_iv_time"
+                android:layout_toEndOf="@+id/activity_info_edit_iv_time"
+                android:layout_toRightOf="@id/activity_info_edit_iv_time"
                 android:layout_marginLeft="@dimen/activity_info_margin_small"
                 android:text="@string/activity_info_time_default"
                 android:textColor="@color/activity_info_time_font"
                 android:textSize="@dimen/activity_info_time_font" />
-
             <ImageView
-                android:id="@+id/activity_info_iv_week"
+                android:id="@+id/activity_info_edit_iv_week"
                 android:layout_width="@dimen/activity_info_iv_week_size"
                 android:layout_height="@dimen/activity_info_iv_week_size"
-                android:layout_below="@id/activity_info_tv_time"
                 android:layout_marginTop="@dimen/activity_info_margin_small"
-                android:contentDescription="@string/todo"
-                app:srcCompat="@drawable/week" />
+                android:layout_below="@id/activity_info_edit_tv_time"
+                app:srcCompat="@drawable/week"
+                android:contentDescription="@string/todo" />
             <TextView
-                android:id="@+id/activity_info_tv_week"
+                android:id="@+id/activity_info_edit_tv_week"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignTop="@+id/activity_info_iv_week"
-                android:layout_toEndOf="@+id/activity_info_iv_week"
-                android:layout_toRightOf="@id/activity_info_iv_week"
+                android:layout_alignTop="@+id/activity_info_edit_iv_week"
+                android:layout_toEndOf="@+id/activity_info_edit_iv_week"
+                android:layout_toRightOf="@id/activity_info_edit_iv_week"
                 android:layout_marginLeft="@dimen/activity_info_margin_small"
                 android:text="@string/activity_info_week_default"
                 android:textColor="@color/activity_info_week_font"
                 android:textSize="@dimen/activity_info_week_font" />
 
             <ImageView
-                android:id="@+id/activity_info_iv_note"
+                android:id="@+id/activity_info_edit_iv_note"
                 android:layout_width="@dimen/activity_info_iv_note_size"
                 android:layout_height="@dimen/activity_info_iv_note_size"
-                android:layout_below="@id/activity_info_tv_week"
+                android:layout_below="@id/activity_info_edit_tv_week"
                 android:layout_marginTop="@dimen/activity_info_margin_big"
                 android:contentDescription="@string/todo"
                 app:srcCompat="@drawable/note" />
             <TextView
-                android:id="@+id/activity_info_tv_note"
+                android:id="@+id/activity_info_edit_tv_note"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignTop="@+id/activity_info_iv_note"
-                android:layout_toEndOf="@+id/activity_info_iv_note"
-                android:layout_toRightOf="@id/activity_info_iv_note"
+                android:layout_alignTop="@+id/activity_info_edit_iv_note"
+                android:layout_toEndOf="@+id/activity_info_edit_iv_note"
+                android:layout_toRightOf="@id/activity_info_edit_iv_note"
                 android:layout_marginLeft="@dimen/activity_info_margin_small"
                 android:text="@string/activity_info_note_hint"
                 android:textColor="@color/activity_info_note_hint_font"
                 android:textSize="@dimen/activity_info_note_hint_font" />
 
             <EditText
-                android:id="@+id/activity_info_edt_note"
+                android:id="@+id/activity_info_edit_edt_note"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/activity_info_tv_note"
-                android:autofillHints="notes"
-                android:inputType="textUri|textShortMessage|textLongMessage|none|textWebEditText|textMultiLine|number|text|textImeMultiLine"
+                android:layout_below="@id/activity_info_edit_tv_note"
+                android:autofillHints="Notes"
+                android:inputType="textUri|textShortMessage|textLongMessage|none|textMultiLine|number|text|textImeMultiLine"
                 android:textColor="@color/activity_info_note_font"
-                android:textSize="@dimen/activity_info_note_font" tools:targetApi="o"/>
+                android:textSize="@dimen/activity_info_note_font" tools:targetApi="o"
+                android:maxLines="4"/>
 
             <ImageView
-                android:id="@+id/iv_gumball"
+                android:id="@+id/iv_gumball_edit"
                 android:layout_width="240dp"
                 android:layout_height="240dp"
-                android:layout_below="@id/activity_info_tv_note"
+                android:layout_below="@id/activity_info_edit_tv_note"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="@dimen/activity_info_margin_big"
                 android:alpha="0.5"
                 android:contentDescription="@string/todo"
                 app:srcCompat="@drawable/maoxianzhe" />
 
+            <Button
+                android:id="@+id/activity_info_edit_btn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:backgroundTint="@color/activity_list_btn_bg"
+                android:text="@string/activity_info_edit_btn"
+                android:textSize="@dimen/activity_list_btn_font"
+                android:textColor="@color/activity_list_btn_font"
+                android:layout_margin="@dimen/activity_list_btn_margin"
+                android:background="@drawable/btn_bg"/>
         </RelativeLayout>
 
 
