--- a/src/app/src/main/res/layout/activity_info.xml
+++ b/src/app/src/main/res/layout/activity_info.xml
@@ -134,9 +134,10 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/activity_info_tv_note"
                 android:autofillHints="notes"
-                android:inputType="textUri|textShortMessage|textLongMessage|none|textWebEditText|textMultiLine|number|text|textImeMultiLine"
+                android:inputType="text|textLongMessage|textMultiLine|textImeMultiLine"
                 android:textColor="@color/activity_info_note_font"
-                android:textSize="@dimen/activity_info_note_font" tools:targetApi="o"/>
+                android:textSize="@dimen/activity_info_note_font" tools:targetApi="o"
+                android:maxLines="8"/>
 
             <ImageView
                 android:id="@+id/iv_gumball"
