--- a/src/app/src/main/res/values/dimens.xml
+++ b/src/app/src/main/res/values/dimens.xml
@@ -41,6 +41,8 @@
     <dimen name="activity_list_btn_margin">10dp</dimen>
     <dimen name="activity_list_btn_radius">10dp</dimen>
 
+    <dimen name="activity_back_btn_margin">5dp</dimen>
+
     <dimen name="item_schedule_cv_margin">10dp</dimen>
     <dimen name="item_schedule_cv_radius">10dp</dimen>
     <dimen name="item_schedule_cv_padding">10dp</dimen>
