--- a/src/app/src/main/res/values/dimens.xml
+++ b/src/app/src/main/res/values/dimens.xml
@@ -26,6 +26,11 @@
     <dimen name="activity_info_iv_time_size">32dp</dimen>
     <dimen name="activity_info_iv_week_size">32dp</dimen>
     <dimen name="activity_info_iv_note_size">32dp</dimen>
+    <dimen name="activity_info_edit_iv_teacher_size">45dp</dimen>
+    <dimen name="activity_info_edit_iv_place_size">45dp</dimen>
+    <dimen name="activity_info_edit_iv_time_size">45dp</dimen>
+    <dimen name="activity_info_edit_iv_week_size">45dp</dimen>
+    <dimen name="activity_info_edit_iv_note_size">45dp</dimen>
     <dimen name="activity_info_margin">20dp</dimen>
     <dimen name="activity_info_margin_small">10dp</dimen>
     <dimen name="activity_info_margin_big">40dp</dimen>
@@ -42,6 +47,8 @@
     <dimen name="activity_list_btn_radius">10dp</dimen>
 
     <dimen name="activity_back_btn_margin">5dp</dimen>
+    <dimen name="activity_back_btn_list_btn_width">200dp</dimen>
+    <dimen name="activity_back_btn_list_btn_height">50dp</dimen>
 
     <dimen name="item_schedule_cv_margin">10dp</dimen>
     <dimen name="item_schedule_cv_radius">10dp</dimen>
