fix start up crash

--- a/src/app/src/main/res/layout/activity_info_edit.xml
+++ b/src/app/src/main/res/layout/activity_info_edit.xml
@@ -27,7 +27,9 @@
                 android:text="@string/activity_info_name_default"
                 android:textColor="@color/activity_info_name_font"
                 android:textSize="@dimen/activity_info_edit_name_font"
-                android:maxLines="1"/>
+                android:maxLines="1"
+                android:singleLine="true"
+                android:inputType="text|none"/>
 
             <ImageView
                 android:id="@+id/activity_info_edit_iv_teacher"
@@ -48,7 +50,9 @@
                 android:text="@string/activity_info_teacher_default"
                 android:textColor="@color/activity_info_teacher_font"
                 android:textSize="@dimen/activity_info_edit_teacher_font"
-                android:maxLines="1"/>
+                android:maxLines="1"
+                android:singleLine="true"
+                android:inputType="text|none"/>
 
             <ImageView
                 android:id="@+id/activity_info_edit_iv_place"
@@ -69,7 +73,9 @@
                 android:text="@string/activity_info_place_default"
                 android:textColor="@color/activity_info_place_font"
                 android:textSize="@dimen/activity_info_edit_place_font"
-                android:maxLines="1"/>
+                android:maxLines="1"
+                android:singleLine="true"
+                android:inputType="text|none"/>
 
             <ImageView
                 android:id="@+id/activity_info_edit_iv_time"
@@ -90,7 +96,9 @@
                 android:text="@string/activity_info_time_default"
                 android:textColor="@color/activity_info_time_font"
                 android:textSize="@dimen/activity_info_edit_time_font"
-                android:maxLines="1"/>
+                android:maxLines="1"
+                android:inputType="date|datetime"/>
+
             <ImageView
                 android:id="@+id/activity_info_edit_iv_week"
                 android:layout_width="@dimen/activity_info_edit_iv_week_size"
@@ -110,7 +118,9 @@
                 android:text="@string/activity_info_week_default"
                 android:textColor="@color/activity_info_week_font"
                 android:textSize="@dimen/activity_info_edit_week_font"
-                android:maxLines="1"/>
+                android:maxLines="1"
+                android:singleLine="true"
+                android:inputType="text|none"/>
 
             <ImageView
                 android:id="@+id/activity_info_edit_iv_note"
@@ -120,7 +130,8 @@
                 android:layout_marginTop="@dimen/activity_info_margin_big"
                 android:contentDescription="@string/todo"
                 app:srcCompat="@drawable/note" />
-            <EditText
+
+            <TextView
                 android:id="@+id/activity_info_edit_tv_note"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -130,8 +141,7 @@
                 android:layout_marginLeft="@dimen/activity_info_margin_small"
                 android:text="@string/activity_info_note_hint"
                 android:textColor="@color/activity_info_note_hint_font"
-                android:textSize="@dimen/activity_info_edit_note_hint_font"
-                android:maxLines="1"/>
+                android:textSize="@dimen/activity_info_edit_note_hint_font" />
 
             <EditText
                 android:id="@+id/activity_info_edit_edt_note"
@@ -143,7 +153,7 @@
                 android:textColor="@color/activity_info_note_font"
                 android:textSize="@dimen/activity_info_edit_note_font"
                 tools:targetApi="o"
-                android:maxLines="8"/>
+                android:maxLines="8" />
 
             <ImageView
                 android:id="@+id/iv_gumball_edit"
