--- a/src/app/src/main/res/layout/activity_info_edit.xml
+++ b/src/app/src/main/res/layout/activity_info_edit.xml
@@ -24,7 +24,6 @@
                 android:id="@+id/activity_info_edit_tv_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/activity_info_name_default"
                 android:textColor="@color/activity_info_name_font"
                 android:textSize="@dimen/activity_info_edit_name_font"
                 android:maxLines="1"
@@ -42,12 +41,11 @@
             <EditText
                 android:id="@+id/activity_info_edit_tv_teacher"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="@dimen/activity_info_edit_iv_teacher_size"
                 android:layout_alignTop="@+id/activity_info_edit_iv_teacher"
                 android:layout_toEndOf="@+id/activity_info_edit_iv_teacher"
                 android:layout_toRightOf="@id/activity_info_edit_iv_teacher"
                 android:layout_marginLeft="@dimen/activity_info_margin_small"
-                android:text="@string/activity_info_teacher_default"
                 android:textColor="@color/activity_info_teacher_font"
                 android:textSize="@dimen/activity_info_edit_teacher_font"
                 android:maxLines="1"
@@ -65,12 +63,11 @@
             <EditText
                 android:id="@+id/activity_info_edit_tv_place"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="@dimen/activity_info_edit_iv_place_size"
                 android:layout_alignTop="@+id/activity_info_edit_iv_place"
                 android:layout_toEndOf="@+id/activity_info_edit_iv_place"
                 android:layout_toRightOf="@id/activity_info_edit_iv_place"
                 android:layout_marginLeft="@dimen/activity_info_margin_small"
-                android:text="@string/activity_info_place_default"
                 android:textColor="@color/activity_info_place_font"
                 android:textSize="@dimen/activity_info_edit_place_font"
                 android:maxLines="1"
@@ -85,41 +82,51 @@
                 android:layout_marginTop="@dimen/activity_info_margin_small"
                 android:contentDescription="@string/todo"
                 app:srcCompat="@drawable/time" />
-            <EditText
-                android:id="@+id/activity_info_edit_tv_time"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+
+            <Spinner
+                android:id="@+id/activity_info_edit_tv_time_week"
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/activity_info_edit_iv_time_size"
                 android:layout_alignTop="@+id/activity_info_edit_iv_time"
                 android:layout_toEndOf="@+id/activity_info_edit_iv_time"
                 android:layout_toRightOf="@id/activity_info_edit_iv_time"
                 android:layout_marginLeft="@dimen/activity_info_margin_small"
                 android:textColor="@color/activity_info_time_font"
                 android:textSize="@dimen/activity_info_edit_time_font"
-                android:maxLines="1"
-                android:inputType="date|datetime|none"/>
+                android:spinnerMode="dropdown"/>
+
+            <Spinner
+                android:id="@+id/activity_info_edit_tv_time_time"
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/activity_info_edit_iv_time_size"
+                android:layout_alignTop="@+id/activity_info_edit_tv_time_week"
+                android:layout_toEndOf="@+id/activity_info_edit_tv_time_week"
+                android:layout_toRightOf="@id/activity_info_edit_tv_time_week"
+                android:layout_marginStart="@dimen/activity_info_margin_small"
+                android:textColor="@color/activity_info_time_font"
+                android:textSize="@dimen/activity_info_edit_time_font"
+                android:spinnerMode="dropdown"/>
 
             <ImageView
                 android:id="@+id/activity_info_edit_iv_week"
                 android:layout_width="@dimen/activity_info_edit_iv_week_size"
                 android:layout_height="@dimen/activity_info_edit_iv_week_size"
                 android:layout_marginTop="@dimen/activity_info_margin_small"
-                android:layout_below="@id/activity_info_edit_tv_time"
+                android:layout_below="@id/activity_info_edit_tv_time_week"
                 app:srcCompat="@drawable/week"
                 android:contentDescription="@string/todo" />
-            <EditText
+
+            <Spinner
                 android:id="@+id/activity_info_edit_tv_week"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="@dimen/activity_info_edit_iv_week_size"
                 android:layout_alignTop="@+id/activity_info_edit_iv_week"
                 android:layout_toEndOf="@+id/activity_info_edit_iv_week"
                 android:layout_toRightOf="@id/activity_info_edit_iv_week"
                 android:layout_marginLeft="@dimen/activity_info_margin_small"
-                android:text="@string/activity_info_week_default"
                 android:textColor="@color/activity_info_week_font"
                 android:textSize="@dimen/activity_info_edit_week_font"
-                android:maxLines="1"
-                android:singleLine="true"
-                android:inputType="text|none"/>
+                android:spinnerMode="dropdown"/>
 
             <ImageView
                 android:id="@+id/activity_info_edit_iv_note"
@@ -133,7 +140,7 @@
             <TextView
                 android:id="@+id/activity_info_edit_tv_note"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="@dimen/activity_info_edit_iv_note_size"
                 android:layout_alignTop="@+id/activity_info_edit_iv_note"
                 android:layout_toEndOf="@+id/activity_info_edit_iv_note"
                 android:layout_toRightOf="@id/activity_info_edit_iv_note"
@@ -158,7 +165,7 @@
                 android:id="@+id/iv_gumball_edit"
                 android:layout_width="240dp"
                 android:layout_height="240dp"
-                android:layout_below="@id/activity_info_edit_tv_week"
+                android:layout_below="@id/activity_info_edit_tv_note"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="@dimen/activity_info_margin_big"
                 android:alpha="0.5"
